# ugsys-platform-infrastructure

./: .envrc  .gitignore  cdk.json  devbox.json  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.kiro/hooks/: test-after-write.kiro.hook
.kiro/steering/: goals.md  repository-pattern.md  security.md
infra/: app.py  cdk.json
infra/stacks/: admin_panel_ecr_stack.py  admin_panel_stack.py  dns_stack.py  event_bus_stack.py  frontend_stack.py  github_oidc_stack.py  identity_manager_stack.py  observability_stack.py  profile_frontend_stack.py  projects_registry_stack.py  security_stack.py  user_profile_service_stack.py
scripts/: install-hooks.sh  rotate-jwt-keys.sh
scripts/hooks/: pre-commit  pre-push
